--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -12,17 +12,17 @@
 			android:layout_width="fill_parent" android:layout_height="wrap_content" 
 			android:paddingTop="2dip" android:paddingBottom="15dip"
 			android:paddingLeft="2dip" android:paddingRight="2dip"
-			android:text="Steps = 0" 
+			android:text="@string/default_text"
 			android:textSize="20dip">
 		</TextView>
 		<TextView android:id="@+id/input_sensitivity_text"
 			android:layout_width="fill_parent" android:layout_height="wrap_content" 
-			android:text="Sensitivity:" 
+			android:text="@string/sensitivity_text" 
 			android:textSize="20dip">
 		</TextView>
 		<Spinner android:id="@+id/input_sensitivity_spinner"
 			android:layout_width="fill_parent" android:layout_height="wrap_content"
-			android:prompt="@string/sensitivity" android:hint="Sensitivity">
+			android:prompt="@string/sensitivity" android:hint="@string/sensitivity_hint">
 		</Spinner>
 	</LinearLayout>
 	<LinearLayout android:id="@+id/buttons"
